@@ -11,7 +11,6 @@ import java.util.function.Function;
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 
-import com.google.common.collect.ImmutableMap;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.KubernetesResourceList;
 import io.fabric8.kubernetes.api.model.batch.v1.Job;
@@ -54,21 +53,23 @@ public class BackupDeployedResourceScanner extends DeployedResourcesScanner<Stac
     return (StackGresKubernetesClient) client;
   }
 
-  protected ImmutableMap<Class<? extends HasMetadata>,
+  @Override
+  protected Map<Class<? extends HasMetadata>,
       Function<KubernetesClient, MixedOperation<? extends HasMetadata,
           ? extends KubernetesResourceList<? extends HasMetadata>,
               ? extends Resource<? extends HasMetadata>>>> getInNamepspaceResourceOperations() {
     return IN_NAMESPACE_RESOURCE_OPERATIONS;
   }
 
-  protected ImmutableMap<Class<? extends HasMetadata>,
+  @Override
+  protected Map<Class<? extends HasMetadata>,
       Function<KubernetesClient, MixedOperation<? extends HasMetadata,
           ? extends KubernetesResourceList<? extends HasMetadata>,
               ? extends Resource<? extends HasMetadata>>>> getAnyNamespaceResourceOperations() {
-    return ImmutableMap.of();
+    return Map.of();
   }
 
-  static final ImmutableMap<
+  static final Map<
       Class<? extends HasMetadata>,
       Function<
           KubernetesClient,
@@ -77,11 +78,11 @@ public class BackupDeployedResourceScanner extends DeployedResourcesScanner<Stac
               ? extends KubernetesResourceList<? extends HasMetadata>,
               ? extends Resource<? extends HasMetadata>>>>
       IN_NAMESPACE_RESOURCE_OPERATIONS =
-      ImmutableMap.<Class<? extends HasMetadata>, Function<KubernetesClient,
+      Map.<Class<? extends HasMetadata>, Function<KubernetesClient,
           MixedOperation<? extends HasMetadata,
               ? extends KubernetesResourceList<? extends HasMetadata>,
-              ? extends Resource<? extends HasMetadata>>>>builder()
-          .put(Job.class, k8sclient -> k8sclient.batch().v1().jobs())
-          .build();
+              ? extends Resource<? extends HasMetadata>>>>ofEntries(
+          Map.entry(Job.class, k8sclient -> k8sclient.batch().v1().jobs())
+          );
 
 }
