@@ -11,7 +11,6 @@ import java.util.function.Function;
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 
-import com.google.common.collect.ImmutableMap;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.KubernetesResourceList;
 import io.fabric8.kubernetes.api.model.ServiceAccount;
@@ -49,29 +48,33 @@ public class DbOpsDeployedResourceScanner extends DeployedResourcesScanner<Stack
     this.labelFactory = null;
   }
 
+  @Override
   protected Map<String, String> getGenericLabels(StackGresDbOps config) {
     return labelFactory.genericLabels(config);
   }
 
+  @Override
   protected StackGresKubernetesClient getClient() {
     return (StackGresKubernetesClient) client;
   }
 
-  protected ImmutableMap<Class<? extends HasMetadata>,
+  @Override
+  protected Map<Class<? extends HasMetadata>,
       Function<KubernetesClient, MixedOperation<? extends HasMetadata,
           ? extends KubernetesResourceList<? extends HasMetadata>,
               ? extends Resource<? extends HasMetadata>>>> getInNamepspaceResourceOperations() {
     return IN_NAMESPACE_RESOURCE_OPERATIONS;
   }
 
-  protected ImmutableMap<Class<? extends HasMetadata>,
+  @Override
+  protected Map<Class<? extends HasMetadata>,
       Function<KubernetesClient, MixedOperation<? extends HasMetadata,
           ? extends KubernetesResourceList<? extends HasMetadata>,
               ? extends Resource<? extends HasMetadata>>>> getAnyNamespaceResourceOperations() {
-    return ImmutableMap.of();
+    return Map.of();
   }
 
-  static final ImmutableMap<
+  static final Map<
       Class<? extends HasMetadata>,
       Function<
           KubernetesClient,
@@ -80,14 +83,14 @@ public class DbOpsDeployedResourceScanner extends DeployedResourcesScanner<Stack
               ? extends KubernetesResourceList<? extends HasMetadata>,
               ? extends Resource<? extends HasMetadata>>>>
       IN_NAMESPACE_RESOURCE_OPERATIONS =
-      ImmutableMap.<Class<? extends HasMetadata>, Function<KubernetesClient,
+      Map.<Class<? extends HasMetadata>, Function<KubernetesClient,
           MixedOperation<? extends HasMetadata,
               ? extends KubernetesResourceList<? extends HasMetadata>,
-              ? extends Resource<? extends HasMetadata>>>>builder()
-          .put(ServiceAccount.class, KubernetesClient::serviceAccounts)
-          .put(Role.class, client -> client.rbac().roles())
-          .put(RoleBinding.class, client -> client.rbac().roleBindings())
-          .put(Job.class, client -> client.batch().v1().jobs())
-          .build();
+              ? extends Resource<? extends HasMetadata>>>>ofEntries(
+          Map.entry(ServiceAccount.class, KubernetesClient::serviceAccounts),
+          Map.entry(Role.class, client -> client.rbac().roles()),
+          Map.entry(RoleBinding.class, client -> client.rbac().roleBindings()),
+          Map.entry(Job.class, client -> client.batch().v1().jobs())
+          );
 
 }
